...
  | "UndergraduateDegree"
  | "OtherDegree"
  | "Internship"
  | "Residency"
  | "Fellowship"

type GeneralInformationSectionId =
  | "Personal"
  | "PriorNames"
  | "BirthAndCitizenship"
  | "MilitaryService"
  | "Address"
  | "DriversLicense"
  | "Passport"
  | "IdentifyingNumbers"
  | "SpokenLanguages"
...
type OtherCertificationsSectionId =
  | "CMECreditHours"
  | "BLS"
  | "ACLS"
  | "PALS"
  | "ATLS"
  | "CPR"
  | "CoreC"
  | "NALS"
  | "NRP"
  | "OtherCertification"

...
const educationAndTrainingCategory: CategoryType = {
  id: ProfileCategoryIds.EducationAndTraining,
  label: "Education and Training",
  profileSections: [
    {
      label: "Medical/Professional School",
      id: EducationAndTrainingSectionIds.MedicalDegree,
    },
    {
      label: "Other Degree",
      id: EducationAndTrainingSectionIds.OtherDegree,
    },
    {
      label: "Undergraduate Degree",
      id: EducationAndTrainingSectionIds.UndergraduateDegree,
    },
...
const generalInformationCategory: CategoryType = {
  id: ProfileCategoryIds.GeneralInformation,
  label: "General Information",
  profileSections: [
    {
...
    },
    {
      label: "Birth and Citizenship",
      id: GeneralInformationSectionIds.BirthAndCitizenship,
    },
...
    },
    {
      label: "Identifying Numbers",
      id: GeneralInformationSectionIds.IdentifyingNumbers,
    },
    {
      label: "Drivers License",
      id: GeneralInformationSectionIds.DriversLicense,
    },
...
    },
    {
      label: "Military Service",
      id: GeneralInformationSectionIds.MilitaryService,
    },
    {
      label: "Languages Spoken",
      id: GeneralInformationSectionIds.SpokenLanguages,
    },
...
const boardCertificationsCategory: CategoryType = {
  id: ProfileCategoryIds.BoardCertifications,
  label: "Board Certifications",
  profileSections: [
    {
      label: "Primary Specialty",
      id: BoardCertificationsSectionIds.PrimarySpecialty,
    },
    {
      label: "Secondary Specialty",
      id: BoardCertificationsSectionIds.SecondarySpecialty,
    },
...
const professionalLicensureCategory: CategoryType = {
  id: ProfileCategoryIds.ProfessionalLicensure,
  label: "Professional Licensure",
  profileSections: [
    {
      label: "State Medical Licenses",
      id: ProfessionalLicensureSectionIds.StateMedicalLicenses,
    },
    {
      label: "Other State Professional Licenses",
      id: ProfessionalLicensureSectionIds.OtherStateProfessionalLicenses,
    },
    {
      label: "DEA License",
      id: ProfessionalLicensureSectionIds.DEALicense,
    },
    {
      label: "State X-Ray/Fluoroscopy License",
      id: ProfessionalLicensureSectionIds.StateXrayFluoroscopyLicense,
    },
...
const professionalLiabilityInsuranceDetailsCategory: CategoryType = {
  id: ProfileCategoryIds.ProfessionalLiabilityInsuranceDetails,
  label: "Professional Liability Insurance Details",
  profileSections: [
    {
      label: "Professional Liability Insurance Carrier",
      id:
        ProfessionalLiabilityInsuranceDetailsSectionIds.ProfessionalLiabilityInsuranceCarrier,
    },
    {
      label: "Professional Liability Judgments Questionnaire",
      id:
        ProfessionalLiabilityInsuranceDetailsSectionIds.ProfessionalLiabilityJudgmentsQuestionnaire,
    },
    {
      label: "Insurance Carrier or Entity Policies",
      id: ProfessionalLiabilityInsuranceDetailsSectionIds.InsuranceCarrier,
    },
    {
      label: "Malpractice Claims History",
      id: ProfessionalLiabilityInsuranceDetailsSectionIds.MalpracticeClaims,
    },
...
const professionalPeerReferencesCategory: CategoryType = {
  id: ProfileCategoryIds.ProfessionalPeerReferences,
  label: "Professional Peer References",
  profileSections: [
    {
      label: "Peer Reference 1",
      id: ProfessionalPeerReferencesSectionIds.PeerReference1,
    },
    {
      label: "Peer Reference 2",
      id: ProfessionalPeerReferencesSectionIds.PeerReference2,
    },
    {
      label: "Peer Reference 3",
      id: ProfessionalPeerReferencesSectionIds.PeerReference3,
    },
...
const hospitalAffiliationsCategory: CategoryType = {
  id: ProfileCategoryIds.HospitalAffiliations,
  label: "Hospital Affiliations",
  profileSections: [
    {
...
const otherCertificationsCategory: CategoryType = {
  id: ProfileCategoryIds.OtherCertifications,
  label: "Other Certifications",
  profileSections: [
    {
...
    },
    {
      label: "Other",
      id: OtherCertificationsSectionIds.OtherCertification,
    },
    {
      label: "CME Credit Hours",
      id: OtherCertificationsSectionIds.CMECreditHours,
    },
...
const physicianMedicalLicensingExaminationsCategory: CategoryType = {
  id: ProfileCategoryIds.PhysicianMedicalLicensingExaminations,
  label: "Physician Medical Licensing Examinations",
  profileSections: [
    {
      label: "USMLE Scores",
      id: PhysicianMedicalLicensingExaminationsSectionIds.USMLEScores,
    },
    {
      label: "COMLEX USA Scores",
      id: PhysicianMedicalLicensingExaminationsSectionIds.COMLEXUSAScores,
    },
...
const healthcareFacilityAffiliationsCategory: CategoryType = {
  id: ProfileCategoryIds.HealthcareFacilityAffiliations,
  label: "Healthcare Facility Affiliations",
  profileSections: [
    {
...
const academicAppointmentsCategory: CategoryType = {
  id: ProfileCategoryIds.AcademicAppointments,
  label: "Academic Appointments",
  profileSections: [
    {
...
    },
    {
      label: "Administrative Leadership Positions",
      id: AcademicAppointmentsSectionIds.AdministrativeLeadershipPositions,
    },
...
const researchAndPublicBenefitDataCategory: CategoryType = {
  id: ProfileCategoryIds.ResearchAndPublicBenefitData,
  label: "Research and Public Benefit Data",
  profileSections: [
    {
      label: "Demographic Information",
      id: ResearchAndPublicBenefitDataSectionIds.DemographicInformation,
    },
    {
      label: "Health Professions Scholarship",
      id: ResearchAndPublicBenefitDataSectionIds.HealthProfessionsScholarship,
    },
    {
      label: "Loan Repayment/Forgiveness Information",
      id: ResearchAndPublicBenefitDataSectionIds.LoanRepayment,
    },
    {
      label: "National Health Service Corps Scholarship",
      id:
        ResearchAndPublicBenefitDataSectionIds.NationalHealthServiceCorpsScholarship,
    },
    {
      label: "United States Public Health Service",
      id: ResearchAndPublicBenefitDataSectionIds.UniteStatesPublicHealthService,
    },
...
const ppdVaccinationsCategory: CategoryType = {
  id: ProfileCategoryIds.PPDVaccinations,
  label: "PPD/Vaccinations",
  profileSections: [
    {
      label: "COVID-19 Vaccine",
      id: PPDVaccinationsSectionIds.COVID19Vaccine,
    },
    {
      label: "PPD Tuberculosis Testing",
      id: PPDVaccinationsSectionIds.PPDTuberculosisTesting,
    },
    {
      label: "Influenza Vaccination",
      id: PPDVaccinationsSectionIds.InfluenzaVaccination,
    },
...
const workEmploymentHistoryCategory: CategoryType = {
  id: ProfileCategoryIds.WorkEmploymentHistory,
  label: "Work/Employment History",
  profileSections: [
    {
      label: "Medical Group/Employer",
      id: WorkEmploymentHistorySectionIds.MedicalGroupEmployer,
    },
    {
      label: "Explanation for > 6 Month Employment Gap",
      id: WorkEmploymentHistorySectionIds.EmploymentGap,
    },
...
